--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
-    "three": "^0.149.0"
+    "three": "^0.149.0",
+    "three-custom-shader-material": "^5.3.0"
   }
 }
