--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "@fontsource/bebas-neue": "^4.5.9",
     "@react-three/drei": "^9.56.25",
     "@react-three/fiber": "^8.11.2",
-    "framer-motion": "^9.0.4",
+    "@react-three/postprocessing": "^2.7.0",
     "glslify-loader": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.11.4",
     "next": "^13.1.6",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
-    "three": "^0.149.0",
-    "three-custom-shader-material": "^5.3.0"
+    "three": "^0.149.0"
   }
 }
