--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gray-matter": "^4.0.3",
     "gsap": "^3.11.4",
     "next": "^13.1.6",
+    "r3f-perf": "^7.1.2",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
