--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/amiko": "^4.5.10",
     "@fontsource/bebas-neue": "^4.5.9",
     "@fontsource/cairo": "^4.5.13",
+    "@fontsource/poppins": "^4.5.10",
     "@react-three/drei": "^9.56.25",
     "@react-three/fiber": "^8.11.2",
     "@react-three/postprocessing": "^2.7.0",
