big commit, lots of changes, too many to list

--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@fontsource/amiko": "^4.5.10",
     "@fontsource/bebas-neue": "^4.5.9",
     "@fontsource/cairo": "^4.5.13",
+    "@fontsource/jost": "^4.5.13",
     "@fontsource/poppins": "^4.5.10",
     "@react-three/drei": "^9.56.25",
     "@react-three/fiber": "^8.11.2",
     "@react-three/postprocessing": "^2.7.0",
+    "framer-motion": "^10.6.1",
     "glslify-loader": "^2.0.0",
     "gray-matter": "^4.0.3",
-    "gsap": "^3.11.4",
+    "gsap": "^3.11.5",
     "next": "^13.1.6",
     "r3f-perf": "^7.1.2",
     "raw-loader": "^4.0.2",
